# clustering_project

./: .gitignore  Makefile  README.md  app.py  compose.lab.yaml  compose.test.yaml  compose.yaml
.github/workflows/: ci.yml
services/data_gen/: Containerfile  README.md  pyproject.toml
services/data_gen/src/: config.py  defs.py  generate.py
services/data_gen/src/generators/: __init__.py  history.py  products.py  stores.py
services/data_gen/tests/: test_generators.py
services/etl/: Containerfile  README.md  pyproject.toml
services/etl/src/: config.py  defs.py  main.py  spark.py  transform.py  validation.py
services/etl/tests/: test_transform.py
services/model_training/: Containerfile  README.md  pyproject.toml
services/model_training/src/: cluster.py  config.py  data.py  defs.py  log.py  main.py  preprocess.py
services/model_training/src/notebooks/: fine_tuning.ipynb
services/model_training/tests/: test_cluster.py  test_clustering.py  test_data.py  test_log.py  test_preprocess.py
services/orchestrator/: Containerfile  README.md  dagster.yaml  pyproject.toml  workspace.yaml
services/streamlit_app/: Containerfile  README.md  pyproject.toml
services/streamlit_app/src/: __init__.py  app.py  config.py  data_integrity.py  data_loader.py
services/streamlit_app/src/tabs/: business_actions.py  config.py  data_integrity.py  visualization.py
tests/: test_pipeline_integration.py
