[project]
name = "etl"
version = "0.1.0"
description = ""
authors = [
    {name = "salvatoregx",email = "dev.salvatoregx@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyspark (>=4.1.0,<5.0.0)",
    "great-expectations (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
