[project]
name = "streamlit-app"
version = "0.1.0"
description = "Retail Clustering Dashboard"
authors = [
    {name = "salvatoregx",email = "dev.salvatoregx@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.1.0, <3.0.0)",
    "streamlit (>=1.32.0,<2.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "plotly (>=5.19.0,<6.0.0)",
    "scikit-learn (>=1.4.0,<2.0.0)",
    "pyarrow (>=15.0.0,<23.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
